fix nav spacing and page link color

--- a/static/index.css
+++ b/static/index.css
@@ -141,7 +141,7 @@ nav {
   margin: 1rem auto 0 auto;
 
   @media (max-width: 800px) {
-    margin: 1rem 1rem 0 1rem;
+    padding: 0 1rem;
   }
 }
 
@@ -176,7 +176,7 @@ nav {
 a,
 .page-link,
 .page-link-visible-on-hover {
-  color: var(--off-white);
+  color: var(--green);
 }
 
 a:visited,
@@ -242,10 +242,6 @@ a:hover,
   display: flex;
   flex-direction: column;
   background-color: var(--darker-dark-green);
-}
-
-.project-title a {
-  color: var(--green);
 }
 
 .topics {
